--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -13,6 +14,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack-cli": "^3.0.3"
   },
   "devDependencies": {
