--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -13,7 +14,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
